# SaGess

./: .gitignore  1.11.1  Dockerfile  README.md  calc_graph_stats.py  docker_build.sh  environment.yml  generate_script.py  hpc_run_script.sh  install_conda_env.sh  pyg_reqs.txt  pyproject.toml  requirements.txt  run_docker_container.sh  sagess_slurm_jade.sh
configs/: config.yaml
configs/dataset/: Cora.yaml  Deezer.yaml  Ego_Facebook.yaml  EmailEUCore.yaml  SBM.yaml  Wiki.yaml  enron.yaml
configs/experiment/: enron.yaml  guacamol.yaml  qm9_no_h.yaml
configs/general/: general_default.yaml
configs/model/: discrete.yaml
configs/train/: train_default.yaml
data/: sbm_graph.pkl
src/: DSBM.py  diffusion_model.py  diffusion_model_discrete.py  edge_plots.py  evaluation.py  generate_script.py  graph_statistics.py  main.py  run_sagess.py  sampling_test.py  utils.py
src/analysis/: dist_helper.py  spectre_utils.py  visualization.py
src/analysis/orca/: tmp_VH4M583A.txt
src/data/processed/: data.pt
src/datasets/: abstract_dataset.py  guacamol_dataset.py  large_graph_datasets.py  moses_dataset.py  qm9_dataset.py  spectre_dataset.py
src/datasets/data/: direct_sbm_dataset.pt  sbm_dataset.pt  sbm_test.pt  sbm_test_in_out_4.pt  sbm_test_in_out_4_1600_nodes.pt
src/diffusion/: diffusion_utils.py  extra_features.py  extra_features_molecular.py  noise_schedule.py
src/metrics/: molecular_metrics.py  train_metrics.py
src/models/: transformer_model.py
src/runs/VGAE_experiment_2d_100_epochs/: events.out.tfevents.1681913643.DESKTOP-JUPASI5.17684.0  (+159 more)
(+2 files in other folders)
